Revision history for Pod-Loom

0.02   NOT
	- INCOMPATIBLE CHANGE
	  Templates should now provide a _build_sections method
	  instead of a default value for sections
	- Added the Extender role for custom templates

0.01   October 11, 2009
	- Initial release